[tool.poetry]
name = "mdsllm"
version = "0.1.0"
description = ""
authors = ["Maksim Makaranka <maksim.makaranka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.3.11"
langgraph = "^0.2.59"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"
langchain-openai = "^0.2.12"
tavily-python = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
